Home has no longer overflow

--- a/frontend/app/home/Home.css
+++ b/frontend/app/home/Home.css
@@ -2,7 +2,7 @@
     background-color: #EEE9E3;
     padding-top: 50px;
     height: 100vh;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserrat', sans-serif;overflow: hidden;
 }
 
 .topics {
@@ -99,7 +99,6 @@ a {
 .horizontal-lineCourses a,
 .horizontal-lineProfile a {
     transition: transform 0.5s ease-in-out;
-    
 }
 
 .horizontal-lineAbout:hover,
